2025-07-17
  CVAN-65 Enterprise 1966 
    - Overhaul all routes
    - Model improvements  
2025-07-16
  A-1 Skyraider
    - Fix toilet bomb position on pylon
  CVAN-65 Enterprise 1966 
    - New Runway and Routes files
    - Reworked catapults
2025-07-14
  CVAN-65 Enterprise 1966 
    - Move elevator 3 parking pos 1meter forward
    - Clean attributes in main config
    - Fix model problems
    - Reduce complexity of collision shell
  O-1 Bird Dog
    - Add engine nozzle def, otherwise F-14 Tomcat will CTD
2025-07-13
  BB-62 New Jersey
    - Use specific custom shell for main armamanet
  CVAN-65 Enterprise 1966 
    - Adjust take-off angles in runway and routes file
    - Change parking position speeds
    - Model adjustments
2025-07-12
  A-1 Skyraider
    - Split into AD-4 (no bridle) and A-1H (bridle)
    - Add A-4E-C Napalm bombs
    - Add toilet bombs to all pylons
    - Rework flight model to take off from WWII Essex with 70% loadout
  RA-5C Vigilante
    - Rework flight model to have more lift at low speed
    - Add short display name RA-5C 
  CVAN-65 Enterprise 1966 
    - Adjust take-off angles in runway and routes file
    - Change parking position speeds
2025-07-06
  CVA-31 Bon Homme Richard  
    - use "Bonnie Dick" as short name (formerly CVA-31)
2025-07-05
  CVAN-65 Enterprise 1966
    - Shuttle animation moves with cubic acceleration now
  UH-2C Seasprite
    - Small 3D adjustments
2025-07-03
  H-2 Seasprite
      - Add SH-2F, UH-2A, UH-2B, UH-2C variants
      - remove H-2 folder
  Ships
    - Sound update for gun fire
  MiG-21MF
    - Add sinzov's sixth pylon for RATO take-offs
    - Try to fix MiG-21 nose wheel compression
    -  MiG-21MF front wheel fix
  CVAN-65 Enterprise 1966
    - Model improvements
    - Add IFLOLS lights
  CVA Essex
    - Model improvements  
  BB-62 New Jersey
    - Use CC map icon
    - declare it as aircraft carrier for helos evading the crane
  FF Knox Class
    - Use FF map icon
2025-06-06
  MiG-21MF