@@ -212,6 +212,8 @@ Pylons =     {
     -- TeTeT: additional settings
 	Tasks = {
         aircraft_task(AntishipStrike),
+        aircraft_task(Transport),
+        aircraft_task(Reconnaissance),
     },
     DefaultTask = aircraft_task(AntishipStrike),
 	LandRWCategories =
